lab1/Test/L1-A-12-33.output
Error Type A at Line 8
Error Type B at Line 13
Error Type A at Line 15
Error Type B at Line 20
Error Type B at Line 30
Error Type B at Line 37
Error Type A at Line 45
Error Type A at Line 52
Error Type A at Line 53
Error Type B at Line 54
